# exo-windows-porting

./: .gitignore  BUG_FIXES_2026-04-03.md  CUDA_WINDOWS_INTEGRATION_GUIDE.md  CUDA_WINDOWS_SUPPORT_COMPLETE.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_STATUS_2026-04-01.md  FINAL_DEVELOPMENT_STATUS_2026-04-01.md  FINAL_PROJECT_STATUS_2026-04-02.md  FINAL_STATUS_2026-04-01.md  PHASE1_STATUS_2026-04-02.md  PHASE2_STATUS_2026-04-02.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  REMINDER_12HOURS_LATER.md  ROCM_WINDOWS_INTEGRATION_GUIDE.md  ROCM_WINDOWS_SUPPORT_COMPLETE.md  SESSION_COMPLETION_2026-04-02.md  TASKS_INDEX.md  TESTING_STATUS_2026-04-02.md  dxdiag.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: GPU_TROUBLESHOOTING.md  INSTALLATION_GUIDE.md
exo_windows_porting/: main.py
exo_windows_porting/api/: __init__.py  compat_layer.py
exo_windows_porting/backend/: __init__.py  backend_utils.py  base.py  factory.py  llama_cpu.py  llama_cuda.py  llama_rocm.py
exo_windows_porting/dashboard/: __init__.py  server.py
exo_windows_porting/dashboard/static/: index.html
exo_windows_porting/distributed/: __init__.py  adaptive_scheduler.py  constraint_solver.py  coordinator.py  hypergraph.py  pipeline.py  shard.py  sharded_model.py  transport.py  worker.py  worker_cli.py
network/: __init__.py  discovery.py  health_monitor.py  router.py
scripts/: api_client_test.py  benchmark_cuda_performance.py  benchmark_performance.py  benchmark_rocm_performance.py  install_cuda_windows.bat  install_rocm_windows.bat  start-exo-windows-porting.bat  start_server.py  test_api_compat.py  test_server_module.py
tasks/: TASK-001-p2p-network.md  TASK-002-rocm-integration.md
tests/: __init__.py  test_discovery_actual.py  test_distributed.py  test_health_monitor.py  test_hypergraph.py  test_integration.py  test_router_actual.py  test_server.py
